[gd_scene load_steps=5 format=3 uid="uid://cidkh7fh5ofub"]

[ext_resource type="Script" path="res://Scripts/attackhb.gd" id="1_bkyo3"]
[ext_resource type="Texture2D" uid="uid://b3g6n1h8ykn8g" path="res://icon.svg" id="2_8rdyc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfgmd"]
size = Vector2(20, 48)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ep522"]
properties/0/path = NodePath(".:monitoring")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:monitorable")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:visible")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="0" type="Area2D"]
scale = Vector2(10.28, 5.56)
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false
script = ExtResource("1_bkyo3")
attack_duration = 0.05
cooldown_duration = 0.02
hit_lag_duration = 0.05

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_hfgmd")
debug_color = Color(1, 0, 0, 0.419608)

[node name="ATKtimer" type="Timer" parent="."]
one_shot = true

[node name="CDtimer" type="Timer" parent="."]
one_shot = true

[node name="hitlag" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(9.92218, -0.179855)
scale = Vector2(0.155034, 0.370953)
texture = ExtResource("2_8rdyc")

[node name="windup" type="Timer" parent="."]
one_shot = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ep522")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ATKtimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CDtimer" to="." method="_on_cdtimer_timeout"]
[connection signal="timeout" from="hitlag" to="." method="_on_hitlag_timeout"]
[connection signal="timeout" from="windup" to="." method="_on_windup_timeout"]
